# agentic-agent

./: .gitignore  CLAUDE.md  README.md  __init__.py  agent_factory.py  pyproject.toml  session.py
agents/: __init__.py  agent_meta.py  base.py  handoff.py  helpers.py  state.py
skills/: __init__.py  loader.py  meta_tools.py
src/agentic_agents/: README.md  __init__.py  agent_factory.py  session.py
src/agentic_agents/agents/: __init__.py  agent_meta.py  base.py  handoff.py  helpers.py  state.py
src/agentic_agents/llm/: __init__.py  anthropic_client.py  base.py  openai_client.py
src/agentic_agents/mcp/: __init__.py  client.py  registry.py  tools.py  transport.py
src/agentic_agents/skills/: __init__.py  loader.py  meta_tools.py
src/agentic_agents/tools/: __init__.py  base.py  basic_tools.py  registry.py
tests/: conftest.py  test_agent.py  test_agent_factory.py  test_llm.py  test_session_integration.py  test_session_storage.py  test_skills.py  test_tools.py
tests/mcp/: __init__.py  test_client.py  test_registry.py  test_transport.py
tools/: __init__.py  basic_tools.py
