[project]
name = "agentic-agents"
version = "0.1.0"
description = "一个基于 OpenAI/Claude SDK 的多智能体协作框架"
readme = "src/agentic_agents/README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "pydantic>=2.0",
    "frontmatter>=3.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
package-dir = "src"
